2007-07-24  Adele Peterson  <adele@apple.com>

        Reviewed by Hyatt and Adam.

        Added and updated tests for <rdar://problem/5130590> REGRESSION: style="width:1px" on <select> element no longer hides the element
        The metrics have changed for the anonymous block inside popup buttons.

        * fast/forms/menulist-narrow-width-expected.checksum: Added.
        * fast/forms/menulist-narrow-width-expected.png: Added.
        * fast/forms/menulist-narrow-width-expected.txt: Added.
        * fast/forms/menulist-narrow-width.html: Added.

        * editing/pasteboard/4641033-expected.txt:
        * editing/pasteboard/4944770-1-expected.txt:
        * editing/pasteboard/4944770-2-expected.txt:
        * editing/pasteboard/select-element-1-expected.txt:
        * editing/selection/caret-before-select-expected.txt:
        * editing/selection/replaced-boundaries-3-expected.txt:
        * editing/selection/select-box-expected.txt:
        * editing/selection/select-element-paragraph-boundary-expected.txt:
        * fast/block/float/float-avoidance-expected.txt:
        * fast/block/margin-collapse/103-expected.txt:
        * fast/forms/001-expected.checksum:
        * fast/forms/001-expected.png:
        * fast/forms/001-expected.txt:
        * fast/forms/003-expected.txt:
        * fast/forms/004-expected.txt:
        * fast/forms/HTMLOptionElement_label01-expected.txt:
        * fast/forms/HTMLOptionElement_label02-expected.txt:
        * fast/forms/HTMLOptionElement_label03-expected.txt:
        * fast/forms/HTMLOptionElement_label04-expected.txt:
        * fast/forms/HTMLOptionElement_label06-expected.txt:
        * fast/forms/HTMLOptionElement_label07-expected.txt:
        * fast/forms/control-restrict-line-height-expected.txt:
        * fast/forms/disabled-select-change-index-expected.txt:
        * fast/forms/form-element-geometry-expected.txt:
        * fast/forms/menulist-separator-painting-expected.txt: